@@ -1,12 +1,13 @@
 // spotless:off
 //DEPS com.github.ajalt.clikt:clikt-jvm:5.1.0
-//DEPS io.github.wfouche.tulip:tulip-runtime:2.2.3
-//JAVA 25
+//DEPS io.github.wfouche.tulip:tulip-runtime:2.2.4
+//JAVA 21+
 //KOTLIN 2.3.0
 //FILES kwrk_logback.xml
 //RUNTIME_OPTIONS -XX:+IgnoreUnrecognizedVMOptions
 //RUNTIME_OPTIONS --enable-native-access=ALL-UNNAMED
 //RUNTIME_OPTIONS --sun-misc-unsafe-memory-access=allow
+//RUNTIME_OPTIONS -XX:+UseZGC
 // spotless:on
 
 import com.github.ajalt.clikt.core.*
@@ -20,13 +21,11 @@ import java.io.BufferedWriter
 import java.io.File
 import java.io.FileWriter
 import java.io.IOException
-import java.lang.management.ManagementFactory
-import java.util.Locale
 import org.slf4j.Logger
 import org.slf4j.LoggerFactory
 
 const val appName: String = "kwrk"
-const val appVersion: String = "1/2026-02-10T20:19:45"
+const val appVersion: String = "1/2026-03-04T19:42:13"
 
 private fun displayAppInfo() {
     var version: String = appVersion
